<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f8f8f8"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/head_login"
            android:textColor="#202020"
            android:textSize="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/info_entri_code"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:inputType="text"
            android:text="A1B2C3"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/info_login"
            android:textAlignment="center"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/black"
            android:textSize="11dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:background="@drawable/button_yellow"
            android:fontFamily="@font/nunito_bold"
            android:textAllCaps="false"
            android:text="@string/btn_login"
            android:textSize="19dp"
            android:id="@+id/btnMasuk"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#FFFFFF"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quetion_account"
            android:textAlignment="center"
            android:textSize="16dp"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginTop="30dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/buttom_buy_code"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_purple"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:fontFamily="@font/nunito_bold"
            android:id="@+id/btAlert"
            />
    </FrameLayout>
</LinearLayout>